force-app/main/default/objects/VCC_Signers__c/VCC_Signers__c.object-meta.xml
<CustomObject>
    <description>Object use to Identify Signers of Notes or Addendums</description>
    <label>Signers</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>