force-app/main/default/objects/VCC_Signers__c/fields/VCC_Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>VCC_Progress_Note__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Progress Note Signers</description>
    <inlineHelpText>Progress Note Signers</inlineHelpText>
    <label>Progress Note</label>
    <referenceTo>VCC_Progress_Note__c</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>Signers</relationshipName>
    <type>Lookup</type>
</CustomField>