force-app/main/default/objects/VCC_Signers__c/fields/VCC_Role__c.field-meta.xml
<CustomField>
    <fullName>VCC_Role__c</fullName>
    <description>Role of Signer</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Role of Signer</inlineHelpText>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>