force-app/main/default/objects/VCC_Signers__c/fields/VCC_Title__c.field-meta.xml
<CustomField>
    <fullName>VCC_Title__c</fullName>
    <description>Signer&apos;s job title</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Signer&apos;s job title</inlineHelpText>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>